--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                 <div class="info-box">
                   <i class="bi bi-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>info@bluejasper.com</p>
+                  <p>info@bluejasper-infra.com</p>
                 </div>
               </div>
             </div>
