--- a/About-us.html
+++ b/About-us.html
@@ -144,8 +144,8 @@
         </div>
 
         <div class="col-lg-4 col-md-12 footer-contact text-center text-md-start">
-          <h3><i class="bi bi-geo-alt-fill"></i>Address 2</h3>
-          <p style="color: #006aff;">Adyapragnya Technologies private Limited.</p>
+          <h3><i class="bi bi-geo-alt-fill"></i>Indian Office</h3>
+          <a  href="https://www.adyapragnya.com/" style="color: #006aff;">Adyapragnya Technologies private Limited.</a>
         <p>#956 2nd floor Punam Mahal Road
           Kst Town, 
           <br>Bengaluru 560060, India</p>
