--- a/expertises.html
+++ b/expertises.html
@@ -139,8 +139,8 @@
           </div>
 
           <div class="col-lg-4 col-md-12 footer-contact text-center text-md-start">
-            <h3><i class="bi bi-geo-alt-fill"></i>Address 1</h3>
-            <p style="color: #006aff;">Clearblue Infrastructure Solutions Inc.</p>
+            <h3><i class="bi bi-geo-alt-fill"></i>Caribbean Office</h3>
+            <a href="https://clearblue.adyapragnya-infra.com/" style="color: #006aff;">Clearblue Infrastructure Solutions Inc.</a>
             <p>Anfield House, 2nd Avenue Carters Gap, Black Rock,
               <br>St. Michael, Barbados, West Indies</p><br>
           </div>
